_Docker_ use cases

--- a/howtowhale.html
+++ b/howtowhale.html
@@ -1,10 +1,6 @@
 <section id="howtowhale">
-    <h2>This is a slide</h2>
-    <ul>
-        <li>Point 1</li>
-        <li>Point 2</li>
-        <li>Point 3</li>
-    </ul>
+    <h2>How to Whale</h2>
+    <p>Building the ultimate learning environment with JupyterHub and Carina</p>
 
     <aside class="notes">
         These are speaker notes
