--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Carina Use Cases</title>
+		<title>Docker Use Cases</title>
 
-		<meta name="description" content="Docker for Fun and Profit: A look at three fun ways to use Carina">
+		<meta name="description" content="Docker for Fun and Profit: A look at three fun ways to use Docker">
 		<meta name="author" content="Carolyn Van Slyck">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section>
 					<h1>Using Docker for Fun and Profit</h1>
-					<h3>A look at how you can use Carina</h3>
+					<h3>A look at how you can use Docker</h3>
 					<p>
 						<small>Ash Wilson, Carolyn Van Slyck and Nick Silkey</small>
 					</p>
