Open all links in a new page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css" id="theme">
 
+		<!-- Open links outside of presentation -->
+		<base target="_blank">
+
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
