Thank you slide

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
 				<section data-external="deconst.html"> </section>
 				<section data-external="howtowhale.html"> </section>
 
+				<section id="takeout">
+					<h2>Thanks!</h2>
+
+					<p>
+						<a href="https://twitter.com/smashwilson">@smashwilson</a><br/>
+						<a href="https://twitter.com/carolynvs">@carolynvs</a><br/>
+						<a href="https://twitter.com/filler">@filler</a>
+					</p>
+
+					<p style="font-size: 1.5em;">🐳 🐳 🐳 🍄</p>
+
+					<p>
+						<a href="http://getcarina.github.io/carina-use-cases">getcarina.github.io/carina-use-cases</a>
+					</p>
+				</section>
 			</div>
 
 		</div>
