--- a/howtowhale.html
+++ b/howtowhale.html
@@ -3,7 +3,13 @@
     <p>Building the ultimate learning environment with JupyterHub and Carina</p>
 
     <aside class="notes">
-        These are speaker notes
+      * Introduce How to Whale
+        * Demo
+      * What are the parts
+        * Carina OAuth
+        * JupyterHub
+        * Jupyter
+        * JupyterHub plugin
     </aside>
 </section>
 
