--- a/howtowhale.html
+++ b/howtowhale.html
@@ -3,17 +3,43 @@
     <p>Building the ultimate learning environment with JupyterHub and Carina</p>
 
     <aside class="notes">
-      * Introduce How to Whale
-        * Demo
-      * What are the parts
-        * Carina OAuth
-        * JupyterHub
-        * Jupyter
-        * JupyterHub plugin
+      * Teaching Docker <br/>
+      * Catch-22 <br/>
+      * Setup pains <br/>
     </aside>
 </section>
 
-<section id="more-howtowhale">
-    <h2>This is a second slide</h2>
-    <p>Just to show that you can load multiple slides at a time, this is a second slide.</p>
+<section id="moar-whales">
+    <h2>Demo</h2>
+    <p><a href="https://howtowhale.com">howtowhale.com</a></p>
+
+    <aside class="notes">
+      Homepage -> <br/>
+      Login -> <br/>
+      Try Docker <br/>
+    </aside>
+</section>
+
+<section id="whale-slideware">
+  <h2>Slideware Demo</h2>
+  <aside class="notes">
+    These are screenshots in case we are bit by the live demo demons
+  </aside>
+</section>
+
+<section id="howtowhale-home" data-background="images/howtowhale-homepage.png" data-background-size="contain"></section>
+<section id="howtowhale-login"data-background="images/howtowhale-login.png" data-background-size="contain"></section>
+<section id="try-docker" data-background="images/try-docker.png" data-background-size="contain"></section>
+
+<section id="voodoo" data-background="images/howtowhale-topology.png" data-background-size="contain"></section>
+
+<section id="whale-ideas">
+  <h2>A Whale of your Own</h2>
+
+  <ul>
+    <li>Explore an API or CLI</li>
+    <li>Setup-free workshops</li>
+    <li>1-click app installation or demo</li>
+    <li>Interactive documentation</li>
+  </ul>
 </section>
