moar whale pics

--- a/howtowhale.html
+++ b/howtowhale.html
@@ -1,6 +1,7 @@
 <section id="howtowhale">
-    <h2>How to Whale</h2>
-    <p>Building the ultimate learning environment with JupyterHub and Carina</p>
+    <h2>Learning How to Whale</h2>
+
+    <p><img src="images/whale-dream.png" alt="Dream big"/></p>
 
     <aside class="notes">
       * Teaching Docker <br/>
@@ -10,7 +11,7 @@
 </section>
 
 <section id="moar-whales">
-    <h2>Demo</h2>
+    <h2>Live Demo</h2>
     <p><a href="https://howtowhale.com">howtowhale.com</a></p>
 
     <aside class="notes">
@@ -39,7 +40,14 @@
   <ul>
     <li>Explore an API or CLI</li>
     <li>Setup-free workshops</li>
-    <li>1-click app installation or demo</li>
     <li>Interactive documentation</li>
+  </ul>
+</section>
+
+<section id="byoc">
+  <h2>Bring Your Own Compute</h2>
+
+  <ul>
+    <li>1-click app installation or demo</li>
   </ul>
 </section>
