--- a/deconst.html
+++ b/deconst.html
@@ -37,6 +37,8 @@ Outline:
   <h2><a href="https://getcarina.com/">getcarina.com</a></h2>
 
   <aside class="notes">
+    <p>These domains are all served by a single, open-source system called "Deconst"</p>
+    <p>Not static sites</p>
   </aside>
 </section>
 
@@ -48,6 +50,9 @@ Outline:
   <img src="https://cloud.githubusercontent.com/assets/17565/15220153/7ef8e212-1834-11e6-928c-c7c24f156713.png" alt="deconst logo">
 
   <aside class="notes">
+    <p>"Inverted CMS"</p>
+    <p>Manage content with an API</p>
+    <p>Bring together docs written in many places in many ways</p>
   </aside>
 </section>
 
@@ -56,6 +61,9 @@ Outline:
   <h1>The dark ages</h1>
 
   <aside class="notes">
+    <p>Each site managed independently by different processes</p>
+    <p>Making changes = hunting down the right person and sending email</p>
+    <p>Publishing = all over the place; some Jenkins, some manual</p>
   </aside>
 </section>
 
@@ -68,6 +76,8 @@ Outline:
   </a>
 
   <aside class="notes">
+    <p>"Hey everybody, spend loads of time converting all your docs into our one true format!"</p>
+    <p>Or even worse: tooling</p>
   </aside>
 </section>
 
@@ -76,9 +86,9 @@ Outline:
   <h2>Unify</h2>
 
   <section tagcloud large>
-    <span tagcloud-weight="50">infrastructure </span>
+    <span tagcloud-weight="40">infrastructure </span>
     <span tagcloud-weight="10">storage </span>
-    <span tagcloud-weight="50">templates </span>
+    <span tagcloud-weight="40">templates </span>
     <span tagcloud-weight="20">CSS </span>
     <span tagcloud-weight="20">JS </span>
     <span tagcloud-weight="50">search </span>
@@ -87,6 +97,7 @@ Outline:
   </section>
 
   <aside class="notes">
+    <p>Reasons to bring everything together</p>
   </aside>
 </section>
 
@@ -102,6 +113,11 @@ Outline:
   </section>
 
   <aside class="notes">
+    <p>Things we wanted to leave alone as much as possible</p>
+    <p>Working in a monorepo made builds really slow and led to distracting cross-chatter in issues, etc</p>
+    <p>Sphinx is better for multi-page docs with a TOC</p>
+    <p>Jekyll is built for blogs</p>
+    <p>Process: there is "process sugar" to encourage working on GitHub and deploy continuously</p>
   </aside>
 </section>
 
@@ -112,6 +128,11 @@ Outline:
   <img src="https://cloud.githubusercontent.com/assets/17565/15221290/db62fb10-1838-11e6-814a-2208514cc1db.jpeg" alt="rackernexus">
 
   <aside class="notes">
+    <p>Number one need from the day we shipped: ability to see content before it's live</p>
+    <p>Needs to be accessible to a wide range of potential contributors</p>
+    <p>Don't assume everyone has a good Ruby, Python, Node setup locally</p>
+    <p>Vagrant/local Docker cause more yak-shaving problems</p>
+    <p>No "staging server": complicated git workflows, only one person can use it at a time</p>
   </aside>
 </section>
 
@@ -128,6 +149,10 @@ Outline:
   </p>
 
   <aside class="notes">
+    <p>Deconst consists of two processes (in Docker containers)</p>
+    <p>Content service: CRUD API endpoints for content</p>
+    <p>Stores and indexes incoming documents, addressed by a "content ID"</p>
+    <p>For content IDs, we use URIs based on GitHub repo (but they really just have to be unique)</p>
   </aside>
 </section>
 
@@ -144,6 +169,7 @@ Outline:
   </p>
 
   <aside class="notes">
+    <p>Presenter: map host + path to a content ID, get content, render with template</p>
   </aside>
 </section>
 
@@ -164,6 +190,15 @@ Outline:
   </p>
 
   <aside class="notes">
+    <p>In "staging mode", the first path component is treated as a "build environment"</p>
+    <p>Presenter yanks it off before mapping to a content ID + template</p>
+    <p>Content service checks for content locally</p>
+    <p>Proxies the request to production without the build env if it isn't found</p>
+    <p>
+      The outcome: content submitted to staging with a build environment in its content ID is
+      rendered "over" the current content in production; the rest of the site is "hoisted" beneath
+      the build environment too
+    </p>
   </aside>
 </section>
 
@@ -172,6 +207,9 @@ Outline:
   <img src="https://camo.githubusercontent.com/4cd1630dc1f92b698b4d99a530a7f24a4eea744a/68747470733a2f2f7261772e6769746875622e636f6d2f537472696465722d43442f737472696465722f6d61737465722f7075626c69632f696d616765732f746f705f6769746875622e706e67" alt="strider logo">
 
   <aside class="notes">
+    <p>How does it get there?</p>
+    <p>Opensource CI/CD software called "Strider"</p>
+    <p>Chosen because it's nice and twelve-factor, customizable</p>
   </aside>
 </section>
 
@@ -182,6 +220,12 @@ Outline:
   <img src="https://cloud.githubusercontent.com/assets/17565/15226195/b4b1b742-184f-11e6-80cf-bcb6e2cea27e.png" alt="preparer" class="borderless">
 
   <aside class="notes">
+    <p>Custom Strider build plugin run two Docker containers in sequence</p>
+    <p>First is the "preparer"</p>
+    <p>An adapter between the host doc system and the JSON format the content service understands</p>
+    <p>Writes assets and JSON documents to directories within a workspace volume</p>
+    <p>Important to run in Docker, as a non-root user! Jekyll and Sphinx can both run arbitrary code</p>
+    <p>Also keeps us from having to manage Ruby / Python / Node versions on the build host</p>
   </aside>
 </section>
 
@@ -192,12 +236,18 @@ Outline:
   <img src="https://cloud.githubusercontent.com/assets/17565/15226473/dae4f13a-1850-11e6-8ebe-92d5cde0e678.png" alt="submitter" class="borderless">
 
   <aside class="notes">
+    <p>Query the content service with fingerprints to see which assets and documents are new</p>
+    <p>Pack them in tarballs and bulk-upload them</p>
+    <p>Strider watches the container's exit status</p>
   </aside>
 </section>
 
 <section id="deconst-14" data-transition="none">
 
   <h2>Fin</h2>
+
+  <p><a href="https://deconst.horse/">deconst.horse</a></p>
+  <p><a href="https://github.com/deconst/">github.com/deconst</a></p>
 
   <aside class="notes">
   </aside>
