GitHub link for Strider

--- a/deconst.html
+++ b/deconst.html
@@ -206,6 +206,8 @@ Outline:
 
   <img src="https://camo.githubusercontent.com/4cd1630dc1f92b698b4d99a530a7f24a4eea744a/68747470733a2f2f7261772e6769746875622e636f6d2f537472696465722d43442f737472696465722f6d61737465722f7075626c69632f696d616765732f746f705f6769746875622e706e67" alt="strider logo">
 
+  <p><a href="https://github.com/Strider-CD/strider">github.com/Strider-CD/strider</a></p>
+
   <aside class="notes">
     <p>How does it get there?</p>
     <p>Opensource CI/CD software called "Strider"</p>
