--- a/howtowhale.html
+++ b/howtowhale.html
@@ -10,7 +10,7 @@
     </aside>
 </section>
 
-<section id="moar-whales">
+<section id="howtowhale-demo">
     <h2>Live Demo</h2>
     <p><a href="https://howtowhale.com">howtowhale.com</a></p>
 
@@ -21,7 +21,7 @@
     </aside>
 </section>
 
-<section id="whale-slideware">
+<section id="howtowhale-slideware">
   <h2>Slideware Demo</h2>
   <aside class="notes">
     These are screenshots in case we are bit by the live demo demons
@@ -32,22 +32,43 @@
 <section id="howtowhale-login"data-background="images/howtowhale-login.png" data-background-size="contain"></section>
 <section id="try-docker" data-background="images/try-docker.png" data-background-size="contain"></section>
 
+<section id="whale-guts">
+	<h2>Under the Hood</h2>
+
+	<img src="images/carina-oauth.png" alt="Carina OAuth" height="400px">
+	<img src="images/jupyterhub-carina.png" alt="Jupyter Cargo on Carina Whale" height="400px">
+
+	<aside class="notes">
+		Carina OAuth - authenticate and clusters<br/>
+		jupyterhub-carina plugin
+	</aside>
+</section>
+
+<section id="jupyter">
+	<h2>Jupyter</h2>
+	<p>Interactive online programming environment</p>
+
+	<img src="images/try-python.png" alt="Jupyter notebook screenshot" />
+
+	<p><a href="http://jupyter.org">jupyter.org</a></p>
+	<aside class="notes">
+		Previously iPython<br/>
+		Focused on data science, but fun for other things too!
+	</aside>
+</section>
+
 <section id="voodoo" data-background="images/howtowhale-topology.png" data-background-size="contain"></section>
 
 <section id="whale-ideas">
   <h2>A Whale of your Own</h2>
+
+  <p><a href="https://getcarina.com/blog/learning-how-to-whale/">getcarina.com/blog/learning-how-to-whale</a></p>
 
   <ul>
     <li>Explore an API or CLI</li>
     <li>Setup-free workshops</li>
     <li>Interactive documentation</li>
   </ul>
-</section>
 
-<section id="byoc">
-  <h2>Bring Your Own Compute</h2>
 
-  <ul>
-    <li>1-click app installation or demo</li>
-  </ul>
 </section>
