Slides for howtowhale

--- a/howtowhale.html
+++ b/howtowhale.html
@@ -1,19 +1,74 @@
 <section id="howtowhale">
-    <h2>How to Whale</h2>
-    <p>Building the ultimate learning environment with JupyterHub and Carina</p>
+    <h2>Learning How to Whale</h2>
+
+    <p><img src="images/whale-dream.png" alt="Dream big"/></p>
 
     <aside class="notes">
-      * Introduce How to Whale
-        * Demo
-      * What are the parts
-        * Carina OAuth
-        * JupyterHub
-        * Jupyter
-        * JupyterHub plugin
+      * Teaching Docker <br/>
+      * Catch-22 <br/>
+      * Setup pains <br/>
     </aside>
 </section>
 
-<section id="more-howtowhale">
-    <h2>This is a second slide</h2>
-    <p>Just to show that you can load multiple slides at a time, this is a second slide.</p>
+<section id="howtowhale-demo">
+    <h2>Live Demo</h2>
+    <p><a href="https://howtowhale.com">howtowhale.com</a></p>
+
+    <aside class="notes">
+      Homepage -> <br/>
+      Login -> <br/>
+      Try Docker <br/>
+    </aside>
+</section>
+
+<section id="howtowhale-slideware">
+  <h2>Slideware Demo</h2>
+  <aside class="notes">
+    These are screenshots in case we are bit by the live demo demons
+  </aside>
+</section>
+
+<section id="howtowhale-home" data-background="images/howtowhale-homepage.png" data-background-size="contain"></section>
+<section id="howtowhale-login"data-background="images/howtowhale-login.png" data-background-size="contain"></section>
+<section id="try-docker" data-background="images/try-docker.png" data-background-size="contain"></section>
+
+<section id="whale-guts">
+	<h2>Under the Hood</h2>
+
+	<img src="images/carina-oauth.png" alt="Carina OAuth" height="400px">
+	<img src="images/jupyterhub-carina.png" alt="Jupyter Cargo on Carina Whale" height="400px">
+
+	<aside class="notes">
+		Carina OAuth - authenticate and clusters<br/>
+		jupyterhub-carina plugin
+	</aside>
+</section>
+
+<section id="jupyter">
+	<h2>Jupyter</h2>
+	<p>Interactive online programming environment</p>
+
+	<img src="images/try-python.png" alt="Jupyter notebook screenshot" />
+
+	<p><a href="http://jupyter.org">jupyter.org</a></p>
+	<aside class="notes">
+		Previously iPython<br/>
+		Focused on data science, but fun for other things too!
+	</aside>
+</section>
+
+<section id="voodoo" data-background="images/howtowhale-topology.png" data-background-size="contain"></section>
+
+<section id="whale-ideas">
+  <h2>A Whale of your Own</h2>
+
+  <p><a href="https://getcarina.com/blog/learning-how-to-whale/">getcarina.com/blog/learning-how-to-whale</a></p>
+
+  <ul>
+    <li>Explore an API or CLI</li>
+    <li>Setup-free workshops</li>
+    <li>Interactive documentation</li>
+  </ul>
+
+
 </section>
