--- a/deconst.html
+++ b/deconst.html
@@ -90,7 +90,7 @@ Outline:
   </aside>
 </section>
 
-<section id="deconst-5" data-transition="none" >
+<section id="deconst-5" data-transition="none-out">
 
   <h2>System Components</h2>
 
@@ -110,7 +110,7 @@ Outline:
   </aside>
 </section>
 
-<section id="deconst-6">
+<section id="deconst-6" data-transition="none-in">
 
   <h2>System Components</h2>
 
@@ -171,7 +171,7 @@ Outline:
   </aside>
 </section>
 
-<section id="deconst-9" data-transition="none">
+<section id="deconst-9" data-transition="none-out">
 
   <h2>Preparer</h2>
 
@@ -187,7 +187,7 @@ Outline:
   </aside>
 </section>
 
-<section id="deconst-10" data-transition="none">
+<section id="deconst-10" data-transition="none-in">
 
   <h2>Submitter</h2>
 
