Intro/transition slide

--- a/deconst.html
+++ b/deconst.html
@@ -31,6 +31,17 @@ Outline:
 
 -->
 
+<section id="deconst-0">
+
+  <h2>Documentation Previews</h2>
+
+  <img src="images/dc-logo.png" width="50%" alt="deconst logo">
+
+  <aside class="notes">
+    <p>Mic transition, intro</p>
+  </aside>
+</section>
+
 <section id="deconst-1">
   <h2><a href="https://developer.rackspace.com/">developer.rackspace.com</a></h2>
   <h2><a href="https://support.rackspace.com/">support.rackspace.com</a></h2>
