Use images within the repo

--- a/deconst.html
+++ b/deconst.html
@@ -61,7 +61,7 @@ Outline:
   <h2>What we didn't want</h2>
 
   <a href="https://xkcd.com/927/">
-    <img src="https://cloud.githubusercontent.com/assets/17565/15220287/e4a53ade-1834-11e6-9e70-a6d08b9a4f09.png" alt="obligatory XKCD">
+    <img src="images/xkcd-927.png" alt="obligatory XKCD">
   </a>
 
   <aside class="notes">
@@ -77,7 +77,7 @@ Outline:
   <h2>Deconst</h2>
   <h3>Deconstruct your documentation</h3>
 
-  <img src="https://cloud.githubusercontent.com/assets/17565/15220153/7ef8e212-1834-11e6-928c-c7c24f156713.png" alt="deconst logo">
+  <img src="images/dc-logo.png" alt="deconst logo">
 
   <aside class="notes">
     <p>"Inverted CMS"</p>
@@ -90,7 +90,7 @@ Outline:
 
   <h2>Preview links</h2>
 
-  <img src="https://cloud.githubusercontent.com/assets/17565/15221290/db62fb10-1838-11e6-814a-2208514cc1db.jpeg" alt="rackernexus">
+  <img src="images/preview-links.jpeg" alt="rackernexus">
 
   <aside class="notes">
     <p>Number one need from the day we shipped: ability to see content before it's live</p>
@@ -103,7 +103,7 @@ Outline:
 
 <section id="deconst-5">
 
-  <img src="https://camo.githubusercontent.com/4cd1630dc1f92b698b4d99a530a7f24a4eea744a/68747470733a2f2f7261772e6769746875622e636f6d2f537472696465722d43442f737472696465722f6d61737465722f7075626c69632f696d616765732f746f705f6769746875622e706e67" alt="strider logo">
+  <img src="images/strider-logo.png" alt="strider logo">
 
   <p><a href="https://github.com/Strider-CD/strider">github.com/Strider-CD/strider</a></p>
 
@@ -118,7 +118,7 @@ Outline:
 
   <h2>Preparer</h2>
 
-  <img src="https://cloud.githubusercontent.com/assets/17565/15226195/b4b1b742-184f-11e6-80cf-bcb6e2cea27e.png" alt="preparer" class="borderless">
+  <img src="images/preparer.png" alt="preparer" class="borderless">
 
   <aside class="notes">
     <p>Strider content build plugin runs two Docker containers in sequence</p>
@@ -134,7 +134,7 @@ Outline:
 
   <h2>Submitter</h2>
 
-  <img src="https://cloud.githubusercontent.com/assets/17565/15226473/dae4f13a-1850-11e6-8ebe-92d5cde0e678.png" alt="submitter" class="borderless">
+  <img src="images/submitter.png" alt="submitter" class="borderless">
 
   <aside class="notes">
     <p>Query the content service with fingerprints to see which assets and documents are new</p>
