--- a/chatops.html
+++ b/chatops.html
@@ -1,17 +1,186 @@
-<section id="chatops">
-    <h2>This is a slide</h2>
-    <ul>
-        <li>Point 1</li>
-        <li>Point 2</li>
-        <li>Point 3</li>
-    </ul>
+<!--
+Outline:
 
-    <aside class="notes">
-        These are speaker notes
-    </aside>
+  * Prepend Slide
+    - Who is you?
+  * ChatOps: What Even Is?
+    - "Putting Tools In The Middle Of The Conversation" -jnewland, GitHub Ops
+  * Ohai, Hubot!
+    - node.js-based daemon
+    - persistent datastore support via redis
+  * Make Incident Response Great Again
+    - Alert, Triage, Investigate, Identify, Resolve, Document
+    - Incident Response is inherently collaborative!
+    - PagerDuty, in the open, with identity support
+  * devops.bork
+    - We run Chef
+    - Like `knife` but for chat!
+    - hubot: knife status
+
+  * Another Build, Sir?
+    - Jenkins
+    - See state in chat with webhooks
+    - Instrument jobs via chat
+      - Paramaterized builds, identity support
+      - State of build runs
+  * The Team That Chats Together ...
+    - @hubot: gif me rick astley
+    - @hubot: youtube me rick astley
+    - !m pglass
+    - !h5 elarson
+  * Whos Carina?
+    - Dev onboarded our OpenStack-powered stack
+    - Via docker-compose, in < 1 hour
+  * Onboarding Carina
+    - Heroku + RedisToGo => Carina + ObjectRocket
+    - Typical Stop, Dump, Check, Import, Start
+  * `make` all the things!!@#
+-->
+
+
+<section id="chatops-bumper">
+  <h2>Nick Silkey,  @filler</h2>
+  <h2>Ops/RelEng, Rackspace Austin</h2>
+  <img src="images/chatops-silkey.jpg" style="height:400px"
+                                       alt="#opslife">
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
 </section>
 
-<section id="more-chatops">
-    <h2>This is a second slide</h2>
-    <p>Just to show that you can load multiple slides at a time, this is a second slide.</p>
+<section id="chatops-chatops">
+  <p style="font-size:80px">chatops (n): putting tools</br>
+  in the middle of the conversation</p>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-hubot">
+  <h2>ohai, hubot!</h2>
+  <img src="images/chatops-hubot.png" style="height:400px"
+                                      alt="hubot">
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-incident-response">
+  <h2>🇺🇸 Make Incident Response</br>Great Again 🇺🇸</h2>
+  <img src="images/chatops-tirefire.jpg" style="height:300px"
+                                         alt="it's fine.">
+  <p>Incident Response is inherently collaborative!</p>
+  <p>Engineers - Incident Mgmt - Stakeholders - Leadership</p>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-chef">
+  <h2>Bork, Bork, Bork</h2>
+  <ul>
+    <li>We run <a href="https://www.chef.io/chef/">Chef</a></li>
+    <li>"Like <code>knife</code>, but for chat!"</li>
+    <li>@hubot: knife status</li>
+    <li>@hubot: knife search ...</li>
+    <li>@hubot: knife (client|node|role) show ...</li>
+  </ul>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-jenkins">
+  <h2>Another Build, Sir?</h2>
+  <p>Instrument jobs, in chat, via webhooks</p>
+  <ul>
+    <li>Paramaterized builds (<code>branch=silkey/yak-shave</code>)</li>
+    <li>Identity support (silkey ran, timsim ran w/ param)</li>
+    <li>State of runs (pass, fail, timestamps)</li>
+  </ul>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-team-chat">
+  <h2>The Team That Chats Together ...</h2>
+  <p>@hubot: gif me rick astley</p>
+  <p>@hubot: youtube me rick astley</p>
+  <p>!m elarson</p>
+  <p>pglass++ for fixing all the things!</p>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-carina-look">
+  <h2>Carina, eh?</h2>
+  <p>Dev onboarded our <a href="https://github.com/openstack/designate">OpenStack-based product</a>,</br>
+  in Carina soon after it went public beta.</br>
+  Easy via <code>docker-compose</code>!</p>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-carina-migrate">
+  <h2>Lets Do It Live!</h2>
+  <p>Heroku + RedisToGo => Carina + ObjectRocket</p>
+  <br/>
+  <p>Typical Stop, Dump, Check, Import, Start, Validate</p>
+  <p><code>Dockerfile > Procfile</code></p>
+  <p>Drinking our own 🍾</p>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-make">
+  <h2><code>make</code> All The Things!</h2>
+  <p>Remember <a href="https://github.com/rackerlabs/designate-carina">designate-carina</a>?</br>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make bootstrap</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make cluster-create</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make all</code></pre>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-make-deuce">
+  <h2><code>make</code> All The Hubots!</h2>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make setup</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make carina-create</code></pre>
+  </br>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-build</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-run</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-ps</code></pre>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
+</section>
+
+<section id="chatops-make-trois">
+  <h2><code>make</code> All The Hubots!</h2>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-logs</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-roll</code></pre>
+  </br>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-search</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-add</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-up</code></pre>
+
+  <aside class="notes">
+    These are speaker notes
+  </aside>
 </section>
