Add presenter names

--- a/deconst.html
+++ b/deconst.html
@@ -37,6 +37,8 @@ Outline:
 
   <img src="images/dc-logo.png" width="50%" alt="deconst logo">
 
+  <p>Ash Wilson</p>
+  
   <aside class="notes">
     <p>Mic transition, intro</p>
   </aside>
