--- a/howtowhale.html
+++ b/howtowhale.html
@@ -3,6 +3,8 @@
 
     <p><img src="images/whale-dream.png" alt="Dream big"/></p>
 
+    <p>Carolyn Van Slyck</p>
+    
     <aside class="notes">
       * Teaching Docker <br/>
       * Catch-22 <br/>
