Add env var to pkg targets as needed

--- a/chatops.html
+++ b/chatops.html
@@ -176,8 +176,8 @@ Outline:
   <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-logs</code></pre>
   <pre style="margin-left: auto; margin-right: auto;"><code>$ make d-roll</code></pre>
   </br>
-  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-search</code></pre>
-  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-add</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-search HUBOT_PACKAGE=hubot-pugme</code></pre>
+  <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-add HUBOT_PACKAGE=hubot-pugme</code></pre>
   <pre style="margin-left: auto; margin-right: auto;"><code>$ make pkg-up</code></pre>
 
   <aside class="notes">
